test/core/errors/templates_error/zs/instantiate_name_clash_with_template_error.zs
package instantiate_name_clash_with_template_error;

struct Template<T>
{
    T field;
};

instantiate Template<uint32> Template;
